--- a/AdminDashboard/src/index.html
+++ b/AdminDashboard/src/index.html
@@ -35,16 +35,16 @@
       <!-- Dashboard Content -->
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
         <div class="bg-white p-6 rounded-lg shadow-lg">
-          <h3 class="text-xl font-semibold mb-4">Total Users</h3>
-          <p class="text-4xl font-bold text-blue-600">1,245</p>
+          <h3 class="text-xl font-semibold mb-4">Total Space</h3>
+          <p class="text-4xl font-bold text-blue-600">100</p>
         </div>
         <div class="bg-white p-6 rounded-lg shadow-lg">
-          <h3 class="text-xl font-semibold mb-4">Active Sessions</h3>
-          <p class="text-4xl font-bold text-green-600">980</p>
+          <h3 class="text-xl font-semibold mb-4">Occupied Spaces</h3>
+          <p class="text-4xl font-bold text-green-600">23</p>
         </div>
         <div class="bg-white p-6 rounded-lg shadow-lg">
-          <h3 class="text-xl font-semibold mb-4">New Signups</h3>
-          <p class="text-4xl font-bold text-yellow-600">320</p>
+          <h3 class="text-xl font-semibold mb-4">Availabele Spaces</h3>
+          <p class="text-4xl font-bold text-yellow-600">87</p>
         </div>
       </div>
 
