--- a/AdminDashboard/src/index.html
+++ b/AdminDashboard/src/index.html
@@ -43,7 +43,7 @@
           <p class="text-4xl font-bold text-green-600">23</p>
         </div>
         <div class="bg-white p-6 rounded-lg shadow-lg">
-          <h3 class="text-xl font-semibold mb-4">Availabele Spaces</h3>
+          <h3 class="text-xl font-semibold mb-4">Available Spaces</h3>
           <p class="text-4xl font-bold text-yellow-600">87</p>
         </div>
       </div>
